Tue Oct 24 12:05:42 2000  Darrell Brunsch  <brunsch@uci.edu>

        * ace/OS_String.inl:

          Removed an extra } after an #endif that was producing
          warnings on OSF.

Tue Oct 24 09:27:04 2000  Priyanka Gontla  <pgontla@ece.uci.edu>

	* ace/Test_and_Set.cpp: 
	  Removed the repeated inclusion of the header file.
	  Thanks to Darrell.

Tue Oct 24 03:24:42 2000  Darrell Brunsch  <brunsch@uci.edu>

	* ace/Basic_Types.h:
	* ace/config-win32-common.h:

	  Moved the code that defines ACE_SIZEOF_WCHAR to the config file,
	  so it is easier to add it to other platforms.

	* ace/config-linux-common.h:

	  Added ACE_SIZEOF_WCHAR, ACE_LACKS_ITOW, ACE_LACKS_WCSICMP, and
	  ACE_LACKS_WCSNICMP definitions.

	* ace/Synch.h:

	  Moved the ACE_LEGACY_MODE includes further down in the file.  It
	  was producing errors the way it was, since Test_and_Set needed
	  the Guard classes defined before it was included.

Mon Oct 23 15:31:52 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Malloc_Allocator.cpp:
          Yet another calloc() method that was declared but not defined.

Mon Oct 23 11:37:06 2000  Priyanka Gontla  <pgontla@ece.uci.edu>

        * ace/Init_ACE.cpp:
          Removed the semicolon at the end of ACE_RCSID.

Mon Oct 23 11:20:53 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Malloc_T.i:
          Add missing function, now things actually link.

Mon Oct 23 10:02:36 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Malloc_T.h:
          Add missing prototype, now the code actually compiles.

Mon Oct 23 10:59:21 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

        * ace/OS_String.cpp: Fixed a compile error in gcc 2.95.2.

        * ace/Cached_Connect_Strategy_T.h
        * ace/Cached_Connect_Strategy_T.cpp: Added fixes provided by Edan
          Ayal <edana@bandwiz.com>.

Mon Oct 23 08:37:49 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Malloc_T.{h,cpp}
        * ace/Malloc_Base.h,